--- a/app/src/main/res/layout-sw320dp-land/layout_equalizer.xml
+++ b/app/src/main/res/layout-sw320dp-land/layout_equalizer.xml
@@ -64,18 +64,24 @@
                     android:text="0"
                     android:textAppearance="?android:attr/textAppearanceSmall" />
 
-                <com.reyansh.audio.audioplayer.free.Views.VerticalSeekBar
-                    android:id="@+id/slider_1"
+                <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_above="@+id/e50hztxtHeader"
                     android:layout_below="@+id/e50hztxt"
-                    android:layout_centerHorizontal="true"
-                    android:max="31"
-                    android:progress="16"
-                    android:progressBackgroundTint="@color/textColorSecondary"
-                    android:thumb="@drawable/apptheme_scrubber_control_selector_holo_light"
-                    android:thumbOffset="8dp" />
+                    android:layout_centerHorizontal="true">
+
+                    <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBar
+                        android:id="@+id/slider_1"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:max="31"
+                        android:progress="16"
+                        android:progressBackgroundTint="@color/textColorSecondary"
+                        android:splitTrack="false"
+                        android:thumbOffset="8dp"
+                        app:seekBarRotation="CW270" />
+                </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>
 
                 <TextView
                     android:id="@+id/e50hztxtHeader"
@@ -106,18 +112,24 @@
                     android:text="0"
                     android:textAppearance="?android:attr/textAppearanceSmall" />
 
-                <com.reyansh.audio.audioplayer.free.Views.VerticalSeekBar
-                    android:id="@+id/slider_2"
+                <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_above="@+id/e130hztxtHeader"
                     android:layout_below="@+id/e130hztxt"
-                    android:layout_centerHorizontal="true"
-                    android:max="31"
-                    android:progress="16"
-                    android:progressBackgroundTint="@color/textColorSecondary"
-                    android:thumb="@drawable/apptheme_scrubber_control_selector_holo_light"
-                    android:thumbOffset="8dp" />
+                    android:layout_centerHorizontal="true">
+
+                    <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBar
+                        android:id="@+id/slider_2"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:max="31"
+                        android:progress="16"
+                        android:progressBackgroundTint="@color/textColorSecondary"
+                        android:splitTrack="false"
+                        android:thumbOffset="8dp"
+                        app:seekBarRotation="CW270" />
+                </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>
 
                 <TextView
                     android:id="@+id/e130hztxtHeader"
@@ -148,18 +160,25 @@
                     android:text="0"
                     android:textAppearance="?android:attr/textAppearanceSmall" />
 
-                <com.reyansh.audio.audioplayer.free.Views.VerticalSeekBar
-                    android:id="@+id/slider_3"
+
+                <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_above="@+id/e320hztxtHeader"
                     android:layout_below="@+id/e320hztxt"
-                    android:layout_centerHorizontal="true"
-                    android:max="31"
-                    android:progress="16"
-                    android:progressBackgroundTint="@color/textColorSecondary"
-                    android:thumb="@drawable/apptheme_scrubber_control_selector_holo_light"
-                    android:thumbOffset="8dp" />
+                    android:layout_centerHorizontal="true">
+
+                    <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBar
+                        android:id="@+id/slider_3"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:max="31"
+                        android:progress="16"
+                        android:progressBackgroundTint="@color/textColorSecondary"
+                        android:splitTrack="false"
+                        android:thumbOffset="8dp"
+                        app:seekBarRotation="CW270" />
+                </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>
 
                 <TextView
                     android:id="@+id/e320hztxtHeader"
@@ -193,18 +212,25 @@
 
                     />
 
-                <com.reyansh.audio.audioplayer.free.Views.VerticalSeekBar
-                    android:id="@+id/slider_4"
+
+                <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_above="@+id/e800hztxtHeader"
                     android:layout_below="@+id/e800hztxt"
-                    android:layout_centerHorizontal="true"
-                    android:max="31"
-                    android:progress="16"
-                    android:progressBackgroundTint="@color/textColorSecondary"
-                    android:thumb="@drawable/apptheme_scrubber_control_selector_holo_light"
-                    android:thumbOffset="8dp" />
+                    android:layout_centerHorizontal="true">
+
+                    <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBar
+                        android:id="@+id/slider_4"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:max="31"
+                        android:progress="16"
+                        android:progressBackgroundTint="@color/textColorSecondary"
+                        android:splitTrack="false"
+                        android:thumbOffset="8dp"
+                        app:seekBarRotation="CW270" />
+                </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>
 
                 <TextView
                     android:id="@+id/e800hztxtHeader"
@@ -235,18 +261,25 @@
                     android:text="0"
                     android:textAppearance="?android:attr/textAppearanceSmall" />
 
-                <com.reyansh.audio.audioplayer.free.Views.VerticalSeekBar
-                    android:id="@+id/slider_5"
+
+                <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_above="@+id/e2khztxtHeader"
                     android:layout_below="@+id/e2khztxt"
-                    android:layout_centerHorizontal="true"
-                    android:max="31"
-                    android:progress="16"
-                    android:progressBackgroundTint="@color/textColorSecondary"
-                    android:thumb="@drawable/apptheme_scrubber_control_selector_holo_light"
-                    android:thumbOffset="8dp" />
+                    android:layout_centerHorizontal="true">
+
+                    <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBar
+                        android:id="@+id/slider_5"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:max="31"
+                        android:progress="16"
+                        android:progressBackgroundTint="@color/textColorSecondary"
+                        android:splitTrack="false"
+                        android:thumbOffset="8dp"
+                        app:seekBarRotation="CW270" />
+                </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>
 
                 <TextView
                     android:id="@+id/e2khztxtHeader"
@@ -278,18 +311,24 @@
                     android:text="0"
                     android:textAppearance="?android:attr/textAppearanceSmall" />
 
-                <com.reyansh.audio.audioplayer.free.Views.VerticalSeekBar
-                    android:id="@+id/slider_6"
+                <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_above="@+id/e5khztxtHeader"
                     android:layout_below="@+id/e5khztxt"
-                    android:layout_centerHorizontal="true"
-                    android:max="31"
-                    android:progress="16"
-                    android:progressBackgroundTint="@color/textColorSecondary"
-                    android:thumb="@drawable/apptheme_scrubber_control_selector_holo_light"
-                    android:thumbOffset="8dp" />
+                    android:layout_centerHorizontal="true">
+
+                    <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBar
+                        android:id="@+id/slider_6"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:max="31"
+                        android:progress="16"
+                        android:progressBackgroundTint="@color/textColorSecondary"
+                        android:splitTrack="false"
+                        android:thumbOffset="8dp"
+                        app:seekBarRotation="CW270" />
+                </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>
 
                 <TextView
                     android:id="@+id/e5khztxtHeader"
@@ -319,19 +358,24 @@
                     android:singleLine="true"
                     android:text="0"
                     android:textAppearance="?android:attr/textAppearanceSmall" />
-
-                <com.reyansh.audio.audioplayer.free.Views.VerticalSeekBar
-                    android:id="@+id/slider_7"
+                <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_above="@+id/e12_5khztxtHeader"
                     android:layout_below="@+id/e12_5khztxt"
-                    android:layout_centerHorizontal="true"
-                    android:max="31"
-                    android:progress="16"
-                    android:progressBackgroundTint="@color/textColorSecondary"
-                    android:thumb="@drawable/apptheme_scrubber_control_selector_holo_light"
-                    android:thumbOffset="8dp" />
+                    android:layout_centerHorizontal="true">
+
+                    <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBar
+                        android:id="@+id/slider_7"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:max="31"
+                        android:progress="16"
+                        android:progressBackgroundTint="@color/textColorSecondary"
+                        android:splitTrack="false"
+                        android:thumbOffset="8dp"
+                        app:seekBarRotation="CW270" />
+                </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>
 
                 <TextView
                     android:id="@+id/e12_5khztxtHeader"
