--- a/app/src/main/res/drawable/ic_volume_mute_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_volume_mute_black_24dp.xml
@@ -4,6 +4,6 @@
         android:viewportWidth="24.0"
         android:viewportHeight="24.0">
     <path
-        android:fillColor="#FFFFFF"
+        android:fillColor="@color/textColorSecondary"
         android:pathData="M7,9v6h4l5,5V4l-5,5H7z"/>
 </vector>
