--- a/app/src/main/res/layout-land/activity_browser_sub_list.xml
+++ b/app/src/main/res/layout-land/activity_browser_sub_list.xml
@@ -22,7 +22,7 @@
             <ImageView
                 android:id="@+id/browser_sub_header_image"
                 android:layout_width="match_parent"
-                android:layout_height="340dp"
+                android:layout_height="match_parent"
                 android:adjustViewBounds="true"
                 android:background="@drawable/drawable_black_to_transparent"
                 android:scaleType="centerCrop" />
