--- a/app/src/main/res/xml/pref_settings.xml
+++ b/app/src/main/res/xml/pref_settings.xml
@@ -7,17 +7,17 @@
         android:summary="@string/appearance_description"
         android:title="@string/appearance"/>
 
-    <header
-        android:fragment="com.reyansh.audio.audioplayer.free.Setting.SettingsAlbumArtFragment"
-        android:icon="@drawable/drawable_image"
-        android:summary="@string/album_art_description"
-        android:title="@string/album_art"/>
+    <!--<header-->
+        <!--android:fragment="com.reyansh.audio.audioplayer.free.Setting.SettingsAlbumArtFragment"-->
+        <!--android:icon="@drawable/drawable_image"-->
+        <!--android:summary="@string/album_art_description"-->
+        <!--android:title="@string/album_art"/>-->
 
-    <header
-        android:fragment="com.reyansh.audio.audioplayer.free.Setting.SettingsAudioFragment"
-        android:icon="@drawable/ic_volume_up_black_24dp"
-        android:summary="@string/audio_settings_description"
-        android:title="@string/audio_settings"/>
+    <!--<header-->
+        <!--android:fragment="com.reyansh.audio.audioplayer.free.Setting.SettingsAudioFragment"-->
+        <!--android:icon="@drawable/ic_volume_up_black_24dp"-->
+        <!--android:summary="@string/audio_settings_description"-->
+        <!--android:title="@string/audio_settings"/>-->
 
     <header
         android:fragment="com.reyansh.audio.audioplayer.free.Setting.SettingsMusicLibraryFragment"
@@ -25,11 +25,11 @@
         android:summary="@string/music_folders_description"
         android:title="@string/music_library"/>
 
-    <header
-        android:fragment="com.reyansh.audio.audioplayer.free.Setting.SettingsScrobblingFragment"
-        android:icon="@drawable/ic_placeholder"
-        android:summary="@string/scrobbling_description"
-        android:title="@string/scrobbling"/>
+    <!--<header-->
+        <!--android:fragment="com.reyansh.audio.audioplayer.free.Setting.SettingsScrobblingFragment"-->
+        <!--android:icon="@drawable/ic_placeholder"-->
+        <!--android:summary="@string/scrobbling_description"-->
+        <!--android:title="@string/scrobbling"/>-->
 
     <header
         android:fragment="com.reyansh.audio.audioplayer.free.Setting.SettingsAboutFragment"
