--- a/app/src/main/res/xml/settings_appearance.xml
+++ b/app/src/main/res/xml/settings_appearance.xml
@@ -3,10 +3,10 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <PreferenceCategory android:title="@string/appearance">
 
-        <Preference
-            android:key="preference_key_app_theme"
-            android:summary="@string/app_theme_description"
-            android:title="@string/application_theme" />
+        <!--<Preference-->
+            <!--android:key="preference_key_app_theme"-->
+            <!--android:summary="@string/app_theme_description"-->
+            <!--android:title="@string/application_theme" />-->
 
         <ListPreference
             android:entries="@array/fragments_titles"
